external-crates/move/crates/move-compiler/tests/move_2024/parser/ability_modifier_no_abilities.exp
error[E01003]: invalid modifier
  ┌─ tests/move_2024/parser/ability_modifier_no_abilities.move:4:5
  │
4 │     struct Foo has {}
  │     ^^^^^^ Invalid struct declaration. Internal struct declarations are not yet supported
  │
  = Visibility annotations are required on struct declarations from the Move 2024 edition onwards.

error[E01002]: unexpected token
  ┌─ tests/move_2024/parser/ability_modifier_no_abilities.move:4:20
  │
4 │     struct Foo has {}
  │                    ^ Unexpected '{'. Expected a type ability, one of: 'copy', 'drop', 'store', or 'key'

